--- a/speechRecognition/index.html
+++ b/speechRecognition/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <button class="talk">Talk</button>
+    <button type="reset">REFRESH</button>
     <h3 class="content"></h3>
 
     <script src="./app.js"></script>
